update analyze script

--- a/evaluation/analyze.ipynb
+++ b/evaluation/analyze.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
     "plt.title('Statistics for QUIC Initial packets sent to airbnb.com', fontsize=14)\n",
     "plt.xlabel('DNS Types', fontsize=12)\n",
     "plt.ylabel('Timestamp', fontsize=12)\n",
-    "plt.xticks(ticks=[0, 1, 2], labels=[\"Original DNS\", \"HackDNS\", \"HackDNS++\"], fontsize=10)  # Custom x-axis labels\n",
+    "plt.xticks(ticks=[0, 1, 2], labels=[\"Original DNS\", \"ApexDNS naive\", \"ApexDNS advanced\"], fontsize=10)  # Custom x-axis labels\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)  # Add a light grid for better readability\n",
     "\n",
     "# Show the plot\n",
